--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,18 @@
     "name": "pionect/visma-sdk",
     "license": "MIT",
     "type": "library",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "path",
+            "url": "../JsonApiSdkGenerator"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/tomasvanrijsse/saloon-sdk-generator"
+        }
+    ],
     "authors": [
         {
             "name": "Tomas van Rijsse",
@@ -22,8 +34,12 @@
         "laravel/pint": "^1.0",
         "orchestra/testbench": "^8.0 || ^9.0 || ^10.0",
         "pestphp/pest": "^2.0 || ^3.0",
-        "phpunit/phpunit": "^10.0 || ^11.0"
+        "phpunit/phpunit": "^10.0 || ^11.0",
+        "timatic/jsonapi-sdk-generator": "dev-main"
     },
+    "bin": [
+        "bin/generate-sdk"
+    ],
     "autoload": {
         "psr-4": {
             "Pionect\\VismaSdk\\": "src/",
